Some fixes in update editor.